<resources>
    <string name="app_name">Ader-mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ader</string>
    <string name="nav_header_subtitle">A platform for facilitating advertisement activities</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home_subtitle">A platform for facilitating advertising activities and creation management of influencer marketing campaigns</string>
    <string name="offers">Offers</string>
    <string name="auther_by">By:\u0020</string>
    <string name="create_offer">Create offer</string>
    <string name="logout">Logout</string>
    <string name="new_offer">New offer</string>
    <string name="name">Name</string>
    <string name="offer_expiration">Offer expiration</string>
</resources>
