<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.jtom.ader_mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_login"
        android:name="org.jtom.ader_mobile.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment">

        <action
            android:id="@+id/login_fragment_to_home_fragment"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_offers"
        android:name="org.jtom.ader_mobile.ui.offers.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/offers_fragment" />
</navigation>
